Fixed two bugs related to Debug Replays.
 * Fixed a bug where (metadata:) macro calls would be referred to as (storylet:) macro calls.
 * Corrected the use of whitespace around replacements in each replay frame.

Also:
 * Added a "Clear this panel" button to the Errors panel, which, when clicked, removes all of the recorded errors.
 * Made toSource() very slightly more efficient when serialising datamaps and arrays.

--- a/scss/debugmode.scss
+++ b/scss/debugmode.scss
@@ -461,9 +461,14 @@ tw-debugger {
 		content:"~ No enchantments ~";
 		@include emptyMsg();
 	}
-	.panel-errors .panel-rows:empty::before {
-		content:"~ No errors... for now. ~";
-		@include emptyMsg();
+	.panel-errors .panel-rows:empty {
+		&::before {
+			content:"~ No errors... for now. ~";
+			@include emptyMsg();
+		}
+		& + .panel-errors-bottom {
+			display:none;
+		}
 	}
 	&.theme-dark {
 		.panel-variables .panel-rows:empty::before,
